# software_architecture_availability_security

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.md  Taskfile.yml  docker-compose.ids.yml  main.py  pyproject.toml  reconciliation_runs.csv  run_disponibilidad.ps1
.cursor/plans/: fix-csv-maxms-limpieza_fe013d95.plan.md
app/: database.py  main.py  schemas.py  shipment.py
app/database/: models.py  session.py
app/services/: base.py  delivery_partner.py  notification.py  seller.py  shipment.py  shipment_event.py  user.py
apps/: database.py  main.py
apps/database/: models.py  session.py
apps/registers/: Dockerfile
apps/registers/app/: main.py
apps/registers/docker-helper-scripts/: docker-ingest.sh  docker-postgres.sh
apps/services/: IDS.py  delivery_partner.py  notification.py  seller.py  shipment.py  shipment_event.py  user.py
registers/: docker-compose.yml  ingest_data.py  setup_env.ps1
registers/app/: main.py
registers/conciliator_service/: Dockerfile
registers/data/: dispositivo_usuario.csv  order_items.csv  perfile_seguridad_usuario.csv  reconciliation_runs.csv  reservations.csv  sales_orders.csv  usuario.csv  warehouse_stock.csv
registers/docker-helper-scripts/: docker-ingest.sh  docker-pgadmin.sh  docker-postgres.sh
registers/ids_service/: Dockerfile  pyproject.toml
registers/ingest/: Dockerfile  ingest_data.py
scripts/: generate_balanced_registers_data.py
scripts/disponibilidad/: __init__.py  common.py  e1_start_failure.py  e2_runtime_failure.py  e3_load_ids.py  f1_parametrized_audit.py  g_reservations.py  g_scaling_rollback.py  plot_all_g.py  plot_g_new_tests.py  plot_g_results.py  plot_test_v2.py  prepare_g_test_data.py  run_all.py  run_test_v2.py  test_v2.py
src/software_architecture.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+62 files in other folders)
